horizontal view collapse fix v1

--- a/style768.css
+++ b/style768.css
@@ -832,6 +832,26 @@ body {
     align-items: baseline;
     padding: var(--base-rem);
 }
+@media screen and (max-width: 768px) and (orientation: landscape) {
+    .first_inner {
+        z-index: 10;
+        /*change it when responsive*/
+        width: 40rem;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        /*change it when responsive*/
+        height: 130vh;
+    }
+    .first_inner h1 {
+        font-size: 4rem;
+        font-weight: 700;
+        color: var(--primary-clr-green);
+        line-height: 90%;
+    }
+}
 .foot_menu {
     margin: var(--base-rem);
 }
